# git-eventc

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
src/: git-eventc-post-receive.c  git-eventc-webhook.c  libgit-eventc.c  libgit-eventc.h  main.c  post-receive.c  webhook-github.c  webhook-github.h  webhook-gitlab.c  webhook-gitlab.h  webhook-travis.c  webhook-travis.h  webhook.c  webhook.h
tests/: files.c  tests.mk
units/: git-eventc-webhook.service.in  git-eventc-webhook@.service.in  units.mk
